* bigdecimal.c (BigDecimal_coerce): convert a Float to a BigDecimal instead   of converting the receiver to a Float.   [ruby-core:58756] [Bug #9192]

* test/bigdecimal/test_bigdecimal.rb: add tests for the above change.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@44073 b2dd03c8-39d4-4d8f-98ff-823fe69b080e