ext/bigdecimal/bigdecimal.c
@@ -797,7 +797,8 @@ BigDecimal_coerce(VALUE self, VALUE other)
     Real *b;
 
     if (RB_TYPE_P(other, T_FLOAT)) {
-	obj = rb_assoc_new(other, BigDecimal_to_f(self));
+	GUARD_OBJ(b, GetVpValueWithPrec(other, DBL_DIG+1, 1));
+	obj = rb_assoc_new(ToValue(b), self);
     }
     else {
 	if (RB_TYPE_P(other, T_RATIONAL)) {
